Inits Common Exception.